--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://123.207.61.161:3306/yybun?serverTimezone=UTC&noAccessToProcedureBodies=true&useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
+url=jdbc:mysql://95.179.199.42:3306/yybun?serverTimezone=UTC&noAccessToProcedureBodies=true&useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=utf8
 username=root
-password=root
+password=0221liurl
 #定义初始连接数
 initialSize=0
 #定义最大连接数
